src/show-your-terms.sass
$term-color-header: #E1DFE1
$term-color-background: rgba(#1D1F20, .95)
$term-color-highlight: rgba(#1D1F20, .98)

$term-color-red: #EB5E56
$term-color-yellow: #F7BF33
$term-color-green: #69CA42
$term-color-blue: #4A90E2
$term-color-grey: rgba(white, .6)

$term-th-dark: darken(white, 70deg)
$term-th-light: rgba(white, .95)

$term-th-hbg-ubuntu: rgba(66, 65, 61, 1)
$term-th-hfg-ubuntu: rgba(white, .99)
$term-th-bg-ubuntu: rgba(48, 10, 36, .95)
$term-th-fg-ubuntu: rgba(white, .99)
$term-th-icons-ubuntu: url("img/ubuntu-icons.png")

$term-th-hbg-blue: #96a5bc
$term-th-hfg-blue: rgba(15,15,15,0.95)

$term-header-height: 26px
$term-header-buttons-size: $term-header-height * .4
$term-header-buttons-distance: 6px

$term-border-radius: 6px

$term-default-padding: 14px

.showyourterms
  position: relative
  background-color: $term-color-background
  padding: $term-default-padding 0
  color: white
  margin-top: $term-header-height + 10px
  border-radius: 0 0 $term-border-radius $term-border-radius
  margin-bottom: 26px
  font-family: "Roboto Mono", monospace
  font-size: 14px
  
  & div:last-child
    margin-bottom: 1px
    
  >.syt-statusbar
    height: 26px
    background-color: $term-color-header
    position: absolute
    content: ''
    /* top: 100%
    bottom: -1px
    width: 100%
    margin-top: 0
    /* margin-top: -$term-border-radius / 2
    margin-bottom: 0
    border-radius: 0 0 $term-border-radius $term-border-radius
    font-size: 12px
    
    >.status
      color: black

    >.tools
      list-style: none outside none
      padding: 0.5em
      margin: 0
      margin-right: 1em
      position: absolute
      right: 0

      li
        display: inline-block
        margin-left: 1em
        color: black
    
  &:before,
  &:after
    content: ''
    position: absolute
									
  // Bar
  &:before
    width: 100%
    left: 0
    top: -$term-header-height
    height: $term-header-height
    background-color: $term-color-header
    border-radius: $term-border-radius $term-border-radius 0 0
    color: $term-th-dark
    font-size: 14px

  // Bar buttons
  &:after
    width: $term-header-buttons-size
    height: $term-header-buttons-size
    top: -$term-header-height / 2 - $term-header-buttons-size / 2
    left: $term-header-buttons-size * .8
    border-radius: 50%
    background-color: $term-color-red
    box-shadow: ($term-header-buttons-size+$term-header-buttons-distance) 0 0 0 $term-color-yellow, ($term-header-buttons-size+$term-header-buttons-distance)*2 0 0 0 $term-color-green

  // Themes
    
  // Ubuntu theme
  &.ubuntu:before
    background-color: $term-th-hbg-ubuntu
    color: $term-th-hfg-ubuntu
  &.ubuntu:after
    width: 54px
    height: 19px
    top: -20px
    left: $term-header-buttons-size * .8
    border-radius: 0
    background: $term-th-icons-ubuntu
    box-shadow: none
    
  &.ubuntu
    background-color: $term-th-bg-ubuntu
    color: $term-th-fg-ubuntu
  &.ubuntu>.syt-statusbar
    background-color: $term-th-hbg-ubuntu
    color: $term-th-hfg-ubuntu

    >.status
      color: black

    >.tools
      li
        display: inline-block
        margin-left: 1em
        color: $term-th-hfg-ubuntu

  // Dark theme
  &.dark:before
    background-color: $term-th-dark
    color: $term-th-light

  &.dark>.syt-statusbar
    background-color: $term-th-dark
    color: $term-th-light

    >.status
      color: black

    >.tools
      li
        display: inline-block
        margin-left: 1em
        color: $term-th-light

  // Light theme
  &.light
    background-color: $term-th-light
    color: $term-th-dark

  // Blue theme
  &.blue:before
    background-color: $term-th-hbg-blue
    color: $term-th-hfg-blue

  &.blue:after
    background-color: #565eeb
    border-radius: 0%
    box-shadow: none
    right: 8.32px
    left: inherit
    
  &.blue>.syt-statusbar
    background-color: $term-th-hbg-blue
    color: $term-th-hfg-blue
    
  // Window name
  &[data-title]:before
    content: attr(data-title)
    height: 18px
    text-align: center
    padding: 4px 0

  // Output colors
  .red
    color: $term-color-red

  .yellow
    color: $term-color-yellow

  .green
    color: $term-color-green

  .blue
    color: $term-color-blue

  .grey
    color: $term-color-grey

  .underlined
    text-decoration: underline

  // Output types
  .command:before,.type:before
    opacity: .7

  .command:before
    content: '$ '

  .command.active:after
    content: '|'

  .type:before
    content: '> '

  .blink,.command.active:after,.type.active:after
    animation: syt_b 1s linear infinite

  .type, .line, .command
    margin-left: $term-default-padding
    margin-right: $term-default-padding
    
@keyframes syt_b
  0%,50%
    opacity: 0
  51%,100%
    opacity: 1

